--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,65 @@ html {
 body {
   font-family: "Proxima Nova", "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
-  line-height: 1.5; }
+  line-height: 1.6;
+  background-color: #04121f;
+  color: #dde6ed; }
+
+.btn {
+  border-radius: 0;
+  border-width: 2px;
+  padding: 1.2rem 2.6rem;
+  text-transform: uppercase; }
+  .btn--orange {
+    border-color: #d6ac22;
+    color: #d6ac22; }
+    .btn--orange:hover, .btn--orange:focus, .btn--orange:active {
+      background-color: #d6ac22;
+      color: #fff; }
+  .btn--navy {
+    border-color: #04121f;
+    color: #04121f; }
+    .btn--navy:hover, .btn--navy:focus, .btn--navy:active {
+      background-color: #04121f;
+      color: #fff; }
+  .btn--blue {
+    border-color: #01bafd;
+    color: #01bafd; }
+    .btn--blue:hover, .btn--blue:focus, .btn--blue:active {
+      background-color: #01bafd;
+      color: #fff; }
+
+.heading-primary {
+  text-transform: uppercase;
+  font-size: 5rem; }
+
+.header {
+  border: none;
+  position: relative;
+  height: 100vh; }
+  .header__video-filter, .header__content-box, .header__video {
+    position: fixed;
+    top: 0;
+    left: 0; }
+  .header__video {
+    min-width: 100%;
+    min-height: 100%;
+    z-index: 1; }
+  .header__video-filter {
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background: rgba(4, 18, 31, 0.6);
+    background: -webkit-linear-gradient(to right, rgba(22, 40, 54, 0.6), rgba(4, 18, 31, 0.7));
+    background: linear-gradient(to right, rgba(22, 40, 54, 0.6), rgba(4, 18, 31, 0.7)); }
+  .header__content-box {
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    display: table; }
+    .header__content-box__inner {
+      display: table-cell;
+      vertical-align: middle; }
+  .header__description {
+    max-width: 70rem;
+    margin: 0 auto; }
