--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,8 +9,12 @@ $size_heading_3: 2.5rem;
 $size_heading_4: 2.2rem;
 
 //Colors
-$color_greenish_blue: #34c6d3;
-$color_steel_gray: #41464b;
-$color_blue_bayoux: #64707b;
+$color_navy_blue: #04121f;
+$color_light_blue: #01bafd;
+$color_gray: #667f93;
+$color_light_gray: #dde6ed;
+$color_orange: #d6ac22;
+$color_nav: rgba(22,40,54,0.9);
+$color_nav_text: #8a8a8c;
 $color_white: #fff;
-$color_black: #000;
+$color_back: #000;
