--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,11 @@
 
 @import "base/reset";
 @import "base/typography";
+
+@import "components/button";
+@import "components/heading";
+
+@import "layouts/navigation";
+@import "layouts/footer";
+
+@import "pages/header";
