--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -2,3 +2,20 @@
   text-transform: uppercase;
   font-size: $size_heading_1;
 }
+
+.heading-secondary {
+  text-transform: uppercase;
+  font-size: $size_heading_2;
+}
+
+.heading-third {
+  font-size: $size_heading_3;
+}
+
+.heading-fourth {
+  font-size: $size_heading_4;
+}
+
+.heading-fifth {
+  font-size: $size_heading_5;
+}
