--- a/sass/pages/_header.scss
+++ b/sass/pages/_header.scss
@@ -3,21 +3,30 @@
   position: relative;
   height: 100vh;
 
-  &__video-filter, &__content-box, &__video {
-    position: fixed;
+  &__video-container, &__video-filter, &__content-box {
+    position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   &__video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
     min-width: 100%;
     min-height: 100%;
-    z-index: 1;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
   }
 
   &__video-filter {
-    width: 100%;
-    height: 100%;
     z-index: 2;
     background: rgba($color_navy_blue, 0.6);
     background: -webkit-linear-gradient(to right, rgba($color_nav, 0.6), rgba($color_navy_blue, 0.7));
@@ -25,8 +34,6 @@
   }
 
   &__content-box {
-    width: 100%;
-    height: 100%;
     z-index: 3;
     display: table;
 
