--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,10 +12,10 @@ $size_heading_5: 1.8rem;
 //Colors
 $color_navy_blue: #04121f;
 $color_light_blue: #01bafd;
-$color_gray: #667f93;
+$color_gray: #8da5b9;
 $color_light_gray: #dde6ed;
 $color_orange: #d6ac22;
-$color_nav: rgba(22,40,54,0.9);
+$color_nav: #162836;
 $color_nav_text: #8a8a8c;
 $color_white: #fff;
 $color_back: #000;
