--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,5 +11,5 @@ body {
   font-size: $size_default_font;
   line-height: 1.6;
   background-color: $color_navy_blue;
-  color: $color_light_gray;
+  color: $color_gray;
 }
