--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,21 +1,27 @@
 .heading-primary {
   text-transform: uppercase;
   font-size: $size_heading_1;
+  color: $color_light_gray;
 }
 
 .heading-secondary {
   text-transform: uppercase;
   font-size: $size_heading_2;
+  color: $color_light_gray;
 }
 
 .heading-third {
+  text-transform: uppercase;
   font-size: $size_heading_3;
+  color: $color_light_gray;
 }
 
 .heading-fourth {
   font-size: $size_heading_4;
+  color: $color_light_gray;
 }
 
 .heading-fifth {
   font-size: $size_heading_5;
+  color: $color_light_gray;
 }
