--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,9 +9,12 @@
 @import "components/button";
 @import "components/heading";
 @import "components/section";
+@import "components/timeline";
+@import "components/work-list";
 
 @import "layouts/navigation";
 @import "layouts/footer";
 
 @import "pages/header";
 @import "pages/expertise";
+@import "pages/work";
