--- a/sass/pages/_skills.scss
+++ b/sass/pages/_skills.scss
@@ -10,8 +10,8 @@
       li {
         a {
           text-decoration: none;
-          color: $color_light_blue;
-          font-size: $size_heading_5;
+          color: $color_light_gray;
+          font-size: $size_heading_3;
 
           &:hover, &:focus {
             color: $color-orange;
