--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,9 @@ html {
       font-size: 50%; } }
 
 body {
-  font-family: "Proxima Nova", "Helvetica Neue", sans-serif;
+  font-family: "Raleway", "Helvetica Neue", sans-serif;
   font-size: 1.6rem;
+  font-weight: 400;
   line-height: 1.6;
   background-color: #04121f;
   color: #8da5b9; }
@@ -222,7 +223,8 @@ body {
   height: 6rem;
   line-height: 6rem;
   text-align: center;
-  border: 2px solid #01bafd; }
+  border: 2px solid #01bafd;
+  color: #dde6ed; }
 
 .certificates__content-box {
   display: inline-block; }
@@ -230,7 +232,10 @@ body {
     text-transform: uppercase;
     font-size: 1.8rem; }
     .certificates__content-box h6 a {
+      display: inline-block;
       text-decoration: none;
-      color: #01bafd; }
+      color: #01bafd;
+      transition: 0.4s ease; }
       .certificates__content-box h6 a:hover, .certificates__content-box h6 a:focus, .certificates__content-box h6 a:active {
-        color: #d6ac22; }
+        color: #d6ac22;
+        transform: scale(1.05); }
