--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,6 +9,7 @@ html {
 body {
   font-family: $font_default_regular, 'Helvetica Neue', sans-serif;
   font-size: $size_default_font;
+  font-weight: 400;
   line-height: 1.6;
   background-color: $color_navy_blue;
   color: $color_gray;
