--- a/sass/pages/_certificates.scss
+++ b/sass/pages/_certificates.scss
@@ -14,6 +14,7 @@
     line-height: 6rem;
     text-align: center;
     border: 2px solid $color_light_blue;
+    color: $color_light_gray;
   }
 
   &__content-box {
@@ -24,11 +25,14 @@
       font-size: $size_heading_5;
 
       a {
+        display: inline-block;
         text-decoration: none;
         color: $color_light_blue;
+        transition: 0.4s ease;
 
         &:hover, &:focus, &:active {
           color: $color_orange;
+          transform: scale(1.05);
         }
       }
     }
