modify font & color

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,14 +3,14 @@ $font_default_regular: 'Raleway';
 
 //Sizes
 $size_default_font: 1.6rem;
-$size_heading_1: 5rem;
+$size_heading_1: 4.5rem;
 $size_heading_2: 4rem;
 $size_heading_3: 3rem;
 $size_heading_4: 2.2rem;
 $size_heading_5: 1.8rem;
 
 //Colors
-$color_navy_blue: #04121f;
+$color_navy_blue: #04123b;
 $color_light_blue: #01bafd;
 $color_gray: #8da5b9;
 $color_light_gray: #dde6ed;
