--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 1.6;
-  background-color: #04121f;
+  background-color: #04123b;
   color: #8da5b9; }
 
 .icon--big {
@@ -40,10 +40,10 @@ body {
       background-color: #d6ac22;
       color: #fff; }
   .btn--navy {
-    border-color: #04121f;
-    color: #04121f; }
+    border-color: #04123b;
+    color: #04123b; }
     .btn--navy:hover, .btn--navy:focus, .btn--navy:active {
-      background-color: #04121f;
+      background-color: #04123b;
       color: #fff; }
   .btn--blue {
     border-color: #01bafd;
@@ -58,8 +58,11 @@ body {
 
 .heading-primary {
   text-transform: uppercase;
-  font-size: 5rem;
   color: #dde6ed; }
+  .heading-primary--main {
+    font-size: 4.5rem; }
+  .heading-primary--sub {
+    font-size: 3.5rem; }
 
 .heading-secondary {
   text-transform: uppercase;
@@ -81,7 +84,7 @@ body {
 
 .section-box {
   padding: 6rem 0;
-  background-color: #04121f; }
+  background-color: #04123b; }
 
 .timeline .cntl-bar {
   width: 0.5rem; }
@@ -97,7 +100,7 @@ body {
   background-color: inherit;
   border-bottom: 3px solid #01bafd; }
   .timeline .cntl-content h4 {
-    font-weight: 700; }
+    font-weight: 500; }
 
 .work-list {
   list-style: none;
@@ -113,7 +116,7 @@ body {
       width: 1.3em; }
 
 .fat-nav {
-  background-color: rgba(4, 18, 31, 0.8); }
+  background-color: rgba(4, 18, 59, 0.8); }
   .fat-nav ul li a {
     color: #dde6ed; }
     .fat-nav ul li a:hover, .fat-nav ul li a:focus, .fat-nav ul li a:active, .fat-nav ul li a.active {
@@ -165,15 +168,18 @@ body {
     transform: translateX(-50%) translateY(-50%); }
   .header__video-filter {
     z-index: 2;
-    background: rgba(4, 18, 31, 0.6);
-    background: -webkit-linear-gradient(to right, rgba(22, 40, 54, 0.6), rgba(4, 18, 31, 0.7));
-    background: linear-gradient(to right, rgba(22, 40, 54, 0.6), rgba(4, 18, 31, 0.7)); }
+    background: rgba(4, 18, 59, 0.6);
+    background: -webkit-linear-gradient(to right, rgba(22, 40, 54, 0.6), rgba(4, 18, 59, 0.7));
+    background: linear-gradient(to right, rgba(22, 40, 54, 0.6), rgba(4, 18, 59, 0.7)); }
   .header__content-box {
     z-index: 3;
     display: table; }
     .header__content-box__inner {
       display: table-cell;
       vertical-align: middle; }
+      .header__content-box__inner .heading-primary {
+        max-width: 70rem;
+        margin: 0 auto; }
   .header__description {
     max-width: 70rem;
     margin: 0 auto; }
