finish language section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/section";
 @import "components/timeline";
 @import "components/work-list";
+@import "components/circle-progress";
 
 @import "layouts/navigation";
 @import "layouts/footer";
