--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,122 @@ body {
       margin-left: -1.3em;
       width: 1.3em; }
 
+.circle-progress {
+  width: 15rem;
+  height: 15rem;
+  line-height: 15rem;
+  background: none;
+  margin: 0 auto;
+  box-shadow: none;
+  position: relative;
+  left: 0; }
+  .circle-progress:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border: 0.8rem solid #fff;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .circle-progress > span {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: 1; }
+  .circle-progress .progress-left {
+    left: 0; }
+    .circle-progress .progress-left .progress-bar {
+      left: 100%;
+      border-top-right-radius: 8rem;
+      border-bottom-right-radius: 8rem;
+      border-left: 0;
+      -webkit-transform-origin: center left;
+      transform-origin: center left; }
+  .circle-progress .progress-right {
+    right: 0; }
+    .circle-progress .progress-right .progress-bar {
+      left: -100%;
+      border-top-left-radius: 80px;
+      border-bottom-left-radius: 80px;
+      border-right: 0;
+      -webkit-transform-origin: center right;
+      transform-origin: center right;
+      animation: loading-1 1.8s linear forwards; }
+  .circle-progress .progress-bar {
+    width: 100%;
+    height: 100%;
+    background: none;
+    border-width: 0.8rem;
+    border-style: solid;
+    position: absolute;
+    top: 0; }
+  .circle-progress .progress-value {
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    font-size: 1.8rem;
+    color: #fff;
+    line-height: 135px;
+    text-align: center;
+    position: absolute;
+    top: 5%;
+    left: 5%; }
+  .circle-progress.blue .progress-bar {
+    border-color: #01bafd; }
+  .circle-progress.blue .progress-left .progress-bar {
+    animation: loading-1 1.5s linear forwards 1.8s; }
+  .circle-progress.orange .progress-bar {
+    border-color: #d6ac22; }
+  .circle-progress.orange .progress-left .progress-bar {
+    animation: loading-3 1.5s linear forwards 1.8s; }
+
+@keyframes loading-1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg); } }
+
+@keyframes loading-2 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(144deg);
+    transform: rotate(144deg); } }
+
+@keyframes loading-3 {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0); }
+  100% {
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg); } }
+
+@keyframes loading-4 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(36deg);
+    transform: rotate(36deg); } }
+
+@keyframes loading-5 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  100% {
+    -webkit-transform: rotate(126deg);
+    transform: rotate(126deg); } }
+
+@media only screen and (max-width: 990px) {
+  .progress {
+    margin-bottom: 20px; } }
+
 .fat-nav {
   background-color: rgba(4, 18, 59, 0.8); }
   .fat-nav ul li a {
