--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-body {
-  box-sizing: border-box; }
-
 html {
   font-size: 62.5%; }
   @media (max-width: 576px) {
@@ -361,3 +351,10 @@ body {
       .certificates__content-box h6 a:hover, .certificates__content-box h6 a:focus, .certificates__content-box h6 a:active {
         color: #d6ac22;
         transform: scale(1.05); }
+
+.projects .swiper-container {
+  width: 100%; }
+  .projects .swiper-container .swiper-slide {
+    width: 80%;
+    border: 2px solid #01bafd;
+    padding: 2rem; }
