--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,11 +1,11 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit;
-}
-
-body {
-  box-sizing: border-box;
-}
+//*,
+//*::after,
+//*::before {
+//  margin: 0;
+//  padding: 0;
+//  box-sizing: inherit;
+//}
+//
+//body {
+//  box-sizing: border-box;
+//}
