--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,3 +1,10 @@
+@mixin bg-parallax {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
 @mixin button($color-normal: $color_light_blue, $color-hover: $color_white) {
   border-color: $color-normal;
   color: $color-normal;
