--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,7 +15,7 @@ $color_light_blue: #01bafd;
 $color_gray: #8da5b9;
 $color_light_gray: #dde6ed;
 $color_orange: #d6ac22;
-$color_nav: #162836;
+$color_nav: #0f283e;
 $color_nav_text: #8a8a8c;
 $color_white: #fff;
 $color_back: #000;
