--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/timeline";
 @import "components/work-list";
 @import "components/circle-progress";
+@import "components/social-list";
 
 @import "layouts/navigation";
 @import "layouts/footer";
