--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,6 @@ body {
   font-size: $size_default_font;
   font-weight: 400;
   line-height: 1.6;
-  background-color: $color_navy_blue;
+  background-color: $color_nav;
   color: $color_gray;
 }
