--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,19 +2,24 @@
 $font_default_regular: 'Raleway';
 
 //Sizes
-$size_default_font: 1.6rem;
-$size_heading_1: 4.5rem;
-$size_heading_2: 4rem;
+$size_default_font: 1.4rem;
+$size_heading_1: 6.4rem;
+$size_heading_2: 4.8rem;
 $size_heading_3: 3rem;
 $size_heading_4: 2.2rem;
 $size_heading_5: 1.8rem;
 
 //Colors
+$color-primary: #00d664;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
 $color_navy_blue: #04123b;
 $color_light_blue: #01bafd;
-$color_gray: #8da5b9;
+$color_gray: #777;
 $color_light_gray: #dde6ed;
 $color_orange: #d6ac22;
+$color_green: #00d664;
 $color_nav: #0f283e;
 $color_nav_text: #8a8a8c;
 $color_white: #fff;
