--- a/sass/components/_circle-progress.scss
+++ b/sass/components/_circle-progress.scss
@@ -90,9 +90,9 @@
     }
   }
 
-  &.orange {
+  &.green {
     .progress-bar {
-      border-color: $color_orange;
+      border-color: $color_green;
     }
 
     .progress-left {
