--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -11,7 +11,7 @@
       color: $color_light_blue;
 
       &:hover, &:focus, &:active {
-        color: $color_orange;
+        color: $color_green;
       }
     }
   }
