--- a/sass/components/_work-list.scss
+++ b/sass/components/_work-list.scss
@@ -6,7 +6,7 @@
     padding-left: 1.3rem;
 
     &:before {
-      color: $color_light_gray;
+      color: $color_green;
       content: "\f271";
       font-family: Ionicons;
       display: inline-block;
