--- a/sass/pages/_certificates.scss
+++ b/sass/pages/_certificates.scss
@@ -31,7 +31,7 @@
         transition: 0.4s ease;
 
         &:hover, &:focus, &:active {
-          color: $color_orange;
+          color: $color_green;
           transform: scale(1.05);
         }
       }
