--- a/sass/pages/_expertise.scss
+++ b/sass/pages/_expertise.scss
@@ -11,22 +11,29 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 3px solid $color_light_blue;
+    border: 3px solid $color_green;
     transform: translate(2rem, -2rem)
+  }
+
+  &__img-thumbnail {
+    @include box-shadow;
   }
 
   &__icon-wrapper {
     width: 6rem;
+    height: 6rem;
     line-height: 6rem;
-    background-color: $color_light_gray;
-    color: #577285;
+    vertical-align: middle;
+    color: $color_green;
+    border: 2px solid $color_green;
     border-radius: 50%;
     transition: 0.4s ease;
 
     &:hover, &:focus {
-      background-color: $color_light_blue;
-      color: $color_light_gray;
+      background-color: $color_green;
+      color: $color_white;
       transform: translateY(-1rem);
+      @include box-shadow;
     }
   }
 
