--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,8 @@ body {
   left: auto;
   border: 2px solid #fff;
   border-radius: 50%;
-  padding: 21px 8px; }
+  padding: 21px 8px;
+  transition: 0.4s ease; }
   .hamburger__icon {
     width: 30px;
     height: 3px;
