--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -20,6 +20,7 @@
   border: 2px solid $color_white;
   border-radius: 50%;
   padding: 21px 8px;
+  transition: 0.4s ease;
 
   &__icon {
     @include hamburger-menu;
