--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  border-top: 1px solid $color_gray;
+  background-color: #f7f7f7;
+  border-top: 1px solid $color_green;
   vertical-align: middle;
 
   &.section-box {
